<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>dev.acrispycookie</groupId>
  <artifactId>CrispyCommons</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>CrispyCommons</name>

  <modules>
    <module>crispycommons-core</module>
      <module>crispycommons-nms</module>
      <module>crispycommons-nms-1-8-R3</module>
      <module>crispycommons-dist</module>
      <module>crispycommons-nms-1-20-R3</module>
      <module>crispycommons-api</module>
  </modules>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>
      <repository>
          <id>sonatype</id>
          <url>https://oss.sonatype.org/content/groups/public/</url>
      </repository>
  </repositories>

  <dependencies>
      <dependency>
          <groupId>net.kyori</groupId>
          <artifactId>adventure-platform-bukkit</artifactId>
          <version>4.3.2</version>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>org.jetbrains</groupId>
          <artifactId>annotations</artifactId>
          <version>24.1.0</version>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>com.github.cryptomorin</groupId>
          <artifactId>XSeries</artifactId>
          <version>11.2.1</version>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-lang3</artifactId>
          <version>3.14.0</version>
          <scope>compile</scope>
      </dependency>
  </dependencies>
</project>
